@@ -4,6 +4,8 @@
 
 == ruote-couch 2.1.10    not yet released
 
+- adapted #query_workitems to ruote 2.1.10
+
 
 == ruote-couch 2.1.9    released 2010/03/22
 
